deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deployment
  namespace: ashutosh-ns
  labels:
    app: fitness
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: fitness

  template:
    metadata:
      labels:
        app: fitness

    spec:
      containers:
        - name: fitness-container
          image: muralisocial123/fitness-app:v1.0.1
          ports:
          - containerPort: 5000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
