flipkart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-deployment
  namespace: ashutosh-ns
  labels:
    app: flipkart
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailabel: 25%
      maxSurge: 25%

  selector:
    matchLabels:
      app: flipkart
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
        - name: flipkart-container
          image: muralisocial123/flipkart-app:v1.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-service
  namespace: ashutosh-ns
spec:
  selector:
    app: flipkart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
